--- a/Asst3/Makefile
+++ b/Asst3/Makefile
@@ -1,4 +1,6 @@
 all:
 	gcc -g client.c -lcrypto -o WTF
+	# gcc -g server.c -lcrypto -lpthread -o WTFserver
 clean:
 	rm -rf WTF
+	# rm -rf WTFserver
